--- a/frontend/register.html
+++ b/frontend/register.html
@@ -20,6 +20,7 @@
       </select>
       <button type="submit">Register</button>
     </form>
+    <a href="./login.html">Go to Log-In page</a>
   </div>
   <script src="app.js"></script>
 </body>
