--- a/frontend/login.html
+++ b/frontend/login.html
@@ -14,7 +14,7 @@
       <input type="password" id="password" placeholder="Password" required>
       <button type="submit">Login</button>
     </form>
-    <a href="./register.html">Don't have an account?</a>
+    <h4>Don't have an account?<a href="./register.html"> Sign-In</a></h4>
   </div>
   <script src="app.js"></script>
 </body>
