--- a/frontend/register.html
+++ b/frontend/register.html
@@ -20,6 +20,7 @@
       </select>
       <button type="submit">Register</button>
     </form>
+   <h4>I have an account. <a href="./login.html"> Sign-In</a></h4>
   </div>
   <script src="app.js"></script>
 </body>
